welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: not found: value ==
 	case (a+b == 10) => 10
                  ^blueTicket:3: error: not found: value +
 	case (a+b == 10) => 10
               ^blueTicket:4: error: not found: value ==
 	case (b-c==10) => 5
                 ^blueTicket:4: error: not found: value -
 	case (b-c==10) => 5
               ^