welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
  (a,b,c) match {
 	case (a+b == 10) => 10
 	case (b-c==10) => 5
 	case (_) => 0
  }
}